# LibrarySystemCLI

./: README.md  pyproject.toml
backend/common/: paths.py  utils.py
backend/domain/: __init__.py  book.py  loan.py
backend/domain/enums/: __init__.py
backend/repository/: book_repository.py  loan_repository.py  student_repository.py
backend/services/books/: create_book.py  delete_book.py  get_books.py  update_book.py
frontend/: helpers.py  main.py
